// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Size /> should render a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Sizeweb__Size-t4oux4-0 dGNBl"
  />
</div>
`;

exports[`<Size /> should render a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight in numeric values 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Sizeweb__Size-t4oux4-0 gzomaA"
  />
</div>
`;

exports[`<Size /> should render a child component without any sizing properties being applied 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Sizeweb__Size-t4oux4-0 fmHHqd"
  />
</div>
`;
